index.css
* {
    font-family: "Press Start 2P";
    color: white;
}

html, body {
  height: 100%;
}

body {
    background: black;
    position: relative;
    margin: 0;
    background: transparent;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-x: hidden;
}

#background {
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url("sprite/background.png");
    background-position: bottom;
    background-size: contain;
    opacity: 0.8;
}

@media (prefers-color-scheme: dark) {
    #background {
	background-image: url("sprite/background_night.png");
	opacity: 1.0;
    }
}

#seed {
    appearance: none;
    margin-top: 32px;
    background: transparent;
    border: none;

    position: absolute;
    text-align: center;
    font-size: 3rem;
    animation: showup 2s cubic-bezier(1, 0, 0.5, 1);
}

@keyframes showup {
    from {
		transform: scale(200%) translateY(300%);
    }
}

#canvas {
    margin-top: 8rem;
    border: 1px solid white;
    animation: fadeIn 2s cubic-bezier(1, 0, 0.5, 1);
}

@keyframes fadeIn {
	from {
        opacity: 0;
	}
	to {
        opacity: 1;
	}
}

